@@ -47,7 +47,7 @@
  * time between jan 1, 1601 and jan 1, 1970 in units of 100 nanoseconds
  */
 #define PTW32_TIMESPEC_TO_FILETIME_OFFSET \
-	  ( ((int64_t) 27111902 << 32) + (int64_t) 3577643008 )
+	  ( ((uint64_t) 27111902UL << 32) + (uint64_t) 3577643008UL )
 
 INLINE void
 ptw32_timespec_to_filetime (const struct timespec *ts, FILETIME * ft)
@@ -60,7 +60,7 @@ ptw32_timespec_to_filetime (const struct timespec *ts, FILETIME * ft)
       * -------------------------------------------------------------------
       */
 {
-  *(int64_t *) ft = ts->tv_sec * 10000000
+  *(uint64_t *) ft = ts->tv_sec * 10000000UL
     + (ts->tv_nsec + 50) / 100 + PTW32_TIMESPEC_TO_FILETIME_OFFSET;
 }
 
@@ -76,8 +76,8 @@ ptw32_filetime_to_timespec (const FILETIME * ft, struct timespec *ts)
       */
 {
   ts->tv_sec =
-    (int) ((*(int64_t *) ft - PTW32_TIMESPEC_TO_FILETIME_OFFSET) / 10000000);
+    (int) ((*(uint64_t *) ft - PTW32_TIMESPEC_TO_FILETIME_OFFSET) / 10000000UL);
   ts->tv_nsec =
-    (int) ((*(int64_t *) ft - PTW32_TIMESPEC_TO_FILETIME_OFFSET -
-	    ((int64_t) ts->tv_sec * (int64_t) 10000000)) * 100);
+    (int) ((*(uint64_t *) ft - PTW32_TIMESPEC_TO_FILETIME_OFFSET -
+	    ((uint64_t) ts->tv_sec * (uint64_t) 10000000UL)) * 100);
 }
